# live-trading-engine

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  conanfile.txt  csp-docs.md
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  release.yml
apps/: CMakeLists.txt
apps/trading_engine/: CMakeLists.txt  main.cpp
config/: redpanda.conf  trading_engine.json
include/trading/core/: matching_engine.hpp  order.hpp  orderbook.hpp  user.hpp
include/trading/execution/: executor.hpp
include/trading/logging/: app_logger.hpp  async_logger.hpp  log_level.hpp  trade_logger.hpp
include/trading/messaging/: queue_client.hpp
include/trading/network/: http_server.hpp
include/trading/statistics/: instrument_stats.hpp  statistics_collector.hpp
include/trading/utils/: concurrent_queue.hpp  config.hpp  thread_pool.hpp  thread_safe_queue.hpp
include/trading/validation/: order_validator.hpp
scripts/: build.sh  format.sh  lint.sh  pre-commit.sh  run_simulation.sh  run_tests.sh  test_endpoints.sh  throughput_eval.sh
src/core/: matching_engine.cpp  order.cpp  orderbook.cpp  user.cpp
src/execution/: executor.cpp
src/logging/: app_logger.cpp  trade_logger.cpp
src/messaging/: queue_client.cpp
src/network/: http_server.cpp
src/statistics/: statistics_collector.cpp
src/utils/: config.cpp  thread_pool.cpp
src/validation/: order_validator.cpp
tests/: CMakeLists.txt
tests/fixtures/: sample_orders.json
tests/integration/: test_pipeline_mock.cpp  test_trading_pipeline.cpp
tests/unit/: test_concurrent_queue.cpp  test_csp_integration.cpp  test_http_server.cpp  test_matching_engine.cpp  test_order_validator.cpp  test_orderbook.cpp  test_queue_client.cpp  test_statistics_collector.cpp  test_thread_pool.cpp  test_thread_safe_queue.cpp  test_user.cpp
